feat: Aprimora a interface do usuário com um novo layout, botão de adicionar arquivos/pastas e entrada .desktop, e habilita multiprocessamento por padrão na compressão.

--- a/org.ziso.gui.yml
+++ b/org.ziso.gui.yml
@@ -23,6 +23,12 @@ modules:
     buildsystem: simple
     build-commands:
       - install -D ziso.py /app/bin/ziso
+      - install -D org.ziso.gui.desktop /app/share/applications/org.ziso.gui.desktop
+      - install -D icon.svg /app/share/icons/hicolor/scalable/apps/org.ziso.gui.svg
     sources:
       - type: file
         path: ziso.py
+      - type: file
+        path: org.ziso.gui.desktop
+      - type: file
+        path: icon.svg
