feat: Adiciona internacionalização (i18n) com gettext, inclui tradução para pt_BR e ajusta o processo de compilação e limpeza.

--- a/org.ziso.gui.yml
+++ b/org.ziso.gui.yml
@@ -8,7 +8,6 @@ finish-args:
   - --socket=fallback-x11
   - --socket=wayland
   - --device=dri
-  - --env=GTK_USE_PORTAL=1
 modules:
   - name: lz4
     buildsystem: simple
@@ -25,6 +24,8 @@ modules:
       - install -D src/ziso.py /app/bin/ziso
       - install -D data/org.ziso.gui.desktop /app/share/applications/org.ziso.gui.desktop
       - install -D data/icon.svg /app/share/icons/hicolor/scalable/apps/org.ziso.gui.svg
+      - mkdir -p /app/share/locale/pt_BR/LC_MESSAGES
+      - msgfmt po/pt_BR.po -o /app/share/locale/pt_BR/LC_MESSAGES/org.ziso.gui.mo
     sources:
       - type: dir
         path: .
