--- a/org.ziso.gui.yml
+++ b/org.ziso.gui.yml
@@ -3,6 +3,7 @@ runtime: org.gnome.Platform
 runtime-version: '49'
 sdk: org.gnome.Sdk
 command: ziso
+separate-locales: false
 finish-args:
   - --share=ipc
   - --socket=fallback-x11
