refactor: Implementa a interface gráfica usando Gtk.Builder e um arquivo UI externo `window.ui`.

--- a/org.ziso.gui.yml
+++ b/org.ziso.gui.yml
@@ -23,6 +23,7 @@ modules:
     buildsystem: simple
     build-commands:
       - install -D src/ziso.py /app/bin/ziso
+      - install -D src/window.ui /app/share/ziso/window.ui
       - install -D data/org.ziso.gui.desktop /app/share/applications/org.ziso.gui.desktop
       - install -D data/org.ziso.gui.metainfo.xml /app/share/metainfo/org.ziso.gui.metainfo.xml
       - install -D data/icon.svg /app/share/icons/hicolor/scalable/apps/org.ziso.gui.svg
